[package]
name = "rusty-pixel-dungeon"
version = "0.1.0"
edition = "2021"
exclude = ["assets/*"]

[workspace.lints.clippy]
type_complexity = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
undocumented_unsafe_blocks = "warn"
redundant_else = "warn"
match_same_arms = "warn"
semicolon_if_nothing_returned = "warn"
too_many_arguments = "allow"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "allow"

[workspace]
members = [ "crates/*"]

[lints]
workspace = true

[dependencies]
uuid = "1.8.0"
anyhow = "1.0.82"
serde = "1.0.198"
thiserror = "1.0.58"
bevy_pancam = "0.11.1"
bevy_tween = "0.4.0"
leafwing-input-manager = "0.13.3"
bevy-inspector-egui = "0.24.0"
toml = "0.8.12"
bevy_kira_audio = "0.19.0"
bevy_ecs_ldtk ={ path = "./crates/bevy_ecs_ldtk/"}
rand = "0.8.5"
time = "0.3.36"
crossbeam-channel = "0.5.12"
image = "0.24.9"
bevy_async_task = "0.1.1"
seldom_state = "0.10.0"
bevy_spritesheet_animation = "0.1.0"

[profile.release]
opt-level = 'z'
lto = "thin"


[dependencies.bevy]
version = "0.13.2"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "vorbis",
    "bevy_gizmos",
    "webgl2",
    "default_font",
    "tonemapping_luts",
    "multi-threaded",
    "dynamic_linking"
]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

